# OpenGL_msdf

./: .gitignore  CMakeLists.txt  README.md
src/: FontAtlas.cpp  FontAtlas.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  main.cpp
src/shader/: shader.frag  shader.vert
